# gugu

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/gugu-cli/: Cargo.toml
crates/gugu-cli/src/: main.rs
crates/gugu-codegen/: Cargo.toml
crates/gugu-codegen/src/: c_backend.rs  lib.rs
crates/gugu-core/: Cargo.toml
crates/gugu-core/src/: agent.rs  atom_id.rs  bond.rs  lib.rs  web.rs
crates/gugu-lexer/: Cargo.toml
crates/gugu-lexer/src/: lexer.rs  lib.rs  token.rs
crates/gugu-parser/: Cargo.toml
crates/gugu-parser/src/: ast.rs  lib.rs  parser.rs
crates/gugu-reducer/: Cargo.toml
crates/gugu-reducer/src/: lib.rs  reducer.rs  rule_table.rs  tests.rs
crates/gugu-runtime/: Cargo.toml
crates/gugu-runtime/src/: exec.rs  lib.rs  lower.rs
crates/gugu-runtime/src/std/: bool.gu  list.gu  nat.gu
crates/gugu-runtime/tests/: arity.rs  bool.rs  force_inspect.rs  fragment.rs  list.rs  literals.rs  nat.rs  or_pattern.rs  structural.rs  test_block.rs  visibility.rs  wildcard.rs
crates/gugu-runtime/tests/common/: mod.rs
